install/playground/meshery-playground-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: my-ip-space
  name: meshery
  labels:
    app: meshery
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: meshery
status:
  loadBalancer: {}
